force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Deploy_Component__c/sf_devops__Deploy_Component__c.object-meta.xml
<CustomObject>
    <description>Information about a metadata type and name that was part of a deployment operation</description>
    <label>Deploy Component</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Deploy Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deploy Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>