force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Deploy_Component__c/fields/sf_devops__Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Deployment_Result__c</fullName>
    <description>The deployment we are associated with.</description>
    <label>Deployment Result</label>
    <referenceTo>sf_devops__Deployment_Result__c</referenceTo>
    <relationshipLabel>Deploy Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>