force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Deploy_Component__c/fields/sf_devops__File_Path__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__File_Path__c</fullName>
    <description>The path of this component</description>
    <label>File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>