force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Deploy_Component__c/fields/sf_devops__Force_Ignored__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Force_Ignored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this component was not allowed to be deployed because of force ignore rules</description>
    <label>Force Ignored</label>
    <type>Checkbox</type>
</CustomField>