force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Deploy_Component__c/fields/sf_devops__Source_Component__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Source_Component__c</fullName>
    <description>The component name (type:name)</description>
    <label>Source Component</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>